apply plugin: 'com.android.application'

android {
    compileSdkVersion 26
    buildToolsVersion '27.0.3'
    defaultConfig {
        applicationId "com.felipemacedo.mytuition"
        minSdkVersion 26
        targetSdkVersion 26
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
//        jackOptions {
//            enabled true
//        }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    configurations.all {
        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
            def requested = details.requested
            if (requested.group == 'com.android.support') {
                if (!requested.name.startsWith("multidex")) {
                    details.useVersion '25.3.1'
                }
            }
        }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })

//    compile "android.arch.lifecycle:runtime:1.0.0" // not necessary if you are using Support Library 26.1+
//    compile "android.arch.lifecycle:extensions:1.0.0-beta1"
//    compile "android.arch.lifecycle:compiler:1.0.0-beta1" // not needed if you are using the DefaultLifecycleObserver from common-java8 artifact.
//    compile "android.arch.lifecycle:common-java8:1.0.0-beta1"
//    compile "android.arch.core.core-testing:1.0.0-beta1"

//    compile "android.arch.paging:runtime:1.0.0-alpha2"

    implementation 'android.arch.persistence.room:runtime:1.0.0-beta1'
    implementation 'android.arch.persistence.room:testing:1.0.0-beta1'
    implementation 'android.arch.persistence.room:rxjava2:1.0.0-beta1'
    implementation 'com.android.support:appcompat-v7:26.1.0'
    implementation 'com.android.support:support-v4:26.1.0'
    implementation 'com.android.support:design:26.1.0'
    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
    implementation 'com.android.support:cardview-v7:26.1.0'
    implementation 'com.android.support:recyclerview-v7:26.1.0'
    implementation 'com.google.firebase:firebase-core:11.4.2'
    implementation 'com.google.firebase:firebase-database:11.4.2'
    implementation 'com.google.firebase:firebase-auth:11.4.2'
    implementation 'com.google.firebase:firebase-crash:11.4.2'
    implementation 'com.android.volley:volley:1.1.0'
    implementation 'org.modelmapper:modelmapper:1.1.0'
    testImplementation 'junit:junit:4.12'
}












apply plugin: 'com.google.gms.google-services'